--- a/obo-stadium/template/template-parts/footer.pug
+++ b/obo-stadium/template/template-parts/footer.pug
@@ -4,7 +4,7 @@ footer.container-fluid
       .logo.col-md-3.col-12.text-md-left.text-center
         img.img-fluid(src='./image/logo-white.png' alt='logo')
       .footer-link.col-md-9.col-12.d-flex.justify-content-md-end.align-items-center.flex-md-row.flex-column
-        a.item(href='./faqs.html') C&aacute;c c&acirc;u h&#x1ECF;i th&#x1B0;&#x1EDD;ng g&#x1EB7;p
-        a.item(href='#') &Dstrok;i&#x1EC1;u kho&#x1EA3;n
-        a.item(href='#') Ch&iacute;nh s&aacute;ch
-        a.item(href='#') H&#x1ED7; tr&#x1EE3;
+        a.item(href='./faqs.html') Các câu hỏi thường gặp
+        a.item(href='#') Điều khoản
+        a.item(href='#') Chính sách
+        a.item(href='#') Hỗ trợ
