--- a/obo-stadium/template/template-parts/header-w-banner.pug
+++ b/obo-stadium/template/template-parts/header-w-banner.pug
@@ -5,17 +5,16 @@ header.container-fluid
     .search-form
       form
         input.form-control(type='text' placeholder='Bạn cần tìm gì...')
-        button.btn.btn-primary.text-uppercase.col-xl-2.col-md-3.col-12.red-btn(type='submit')
-          | T&igrave;m ki&#x1EBF;m t&#x1EA5;t c&#x1EA3;
+        button.btn.btn-primary.text-uppercase.col-xl-2.col-md-3.col-12.red-btn(type='submit') Tìm kiếm tất cả
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarNav.collapse.navbar-collapse.justify-content-md-end.text-center
       ul.navbar-nav
         li.nav-item
-          a.nav-link(href='./shop.html') S&#x1EA3;n ph&#x1EA9;m
+          a.nav-link(href='./shop.html') Sản phẩm
         li.nav-item
-          a.nav-link(href='./news.html') Tin t&#x1EE9;c
+          a.nav-link(href='./news.html') Tin tức
         li.nav-item
-          a.nav-link(href='./account.html') T&agrave;i kho&#x1EA3;n
+          a.nav-link(href='./account.html') Tài khoản
   .content.text-center
     h1.slogan.main-heading.text-uppercase #{pageTitle}
