--- a/obo-stadium/template/bid-details.pug
+++ b/obo-stadium/template/bid-details.pug
@@ -20,37 +20,17 @@ block mainContent
   .container
     .row
       .col-lg-3.left-sidebar-wrapper
-        .left-sidebar
-          .header
-            .avatar
-              img.img-fluid(src='./image/post/avatar.png' alt='avatar')
-            .user-info
-              .user-name
-                | Cody
-              .edit-profile
-                | Ch&#x1EC9;nh s&#x1EED;a t&agrave;i kho&#x1EA3;n
-          .break-line
-          .nav-sidebar
-            a.selling-buying-products.nav-item.active(href='./buying-selling-products.html')
-              | Qu&#x1EA3;n l&yacute; mua/b&aacute;n s&#x1EA3;n ph&#x1EA9;m
-            a.selling-buying-products.nav-item(href='./buying-order.html')
-              | &Dstrok;&#x1A1;n h&agrave;ng mua
-            .selling-buying-products.nav-item
-              | &Dstrok;&#x1A1;n h&agrave;ng b&aacute;n
-            .selling-buying-products.nav-item
-              | Qu&#x1EA3;n l&yacute; t&agrave;i kho&#x1EA3;n
+        include ./template-parts/left-sidebar-account
       .col-lg-9.main-content-wrapper
         .main-content
           .header
             a.go-back-previous-page(href='./buying-selling-products.html')
               i.fas.fa-chevron-left
-              |  Tr&#x1EDF; l&#x1EA1;i
+              |  Trở lại
             .order-status-wrapper
-              div
-                | M&atilde; &dstrok;&#x1A1;n 
+              div Mã đơn
                 span.order-number #123abc
-              .status
-                | H&#x1EBF;t h&#x1EA1;n trong: 18 ng&agrave;y
+              .status Hết hạn trong: 18 ngày
           .break-line
           .item
             .product-info-wrapper
@@ -63,11 +43,9 @@ block mainContent
                   | 8US | 41VN | 26CM
             .price.asks-price
               | 9.550.000 &#x20AB;
-            button.btn.btn-primary.red-btn.cancel-btn
-              | Hu&#x1EF7; &dstrok;&#x1EA5;u gi&aacute;
+            button.btn.btn-primary.red-btn.cancel-btn Huỷ đấu giá
           .item-small
-            .order-number-wrapper
-              | M&atilde; &dstrok;&#x1A1;n 
+            .order-number-wrapper Mã đơn
               a.order-number(href='#')
                 | #123abc
             .item-info-wrapper
@@ -77,12 +55,10 @@ block mainContent
                     | Adidas Yeezy Boost 700 Wave Runner Solid Grey
                   .size
                     | 8US | 41VN | 26CM
-                  .status
-                    | H&#x1EBF;t h&#x1EA1;n trong: 18 ng&agrave;y
+                  .status Hết hạn trong: 18 ngày
               .price.asks-price
                 | 9.550.000 &#x20AB;
-              button.btn.btn-primary.red-btn.cancel-btn
-                | Hu&#x1EF7; &dstrok;&#x1EA5;u gi&aacute;
+              button.btn.btn-primary.red-btn.cancel-btn Huỷ đấu giá
 
 block footer
   include ./template-parts/footer
