update shop page (small filter bar wip)

--- a/obo-stadium/sass/components/shop/filter-bar.scss
+++ b/obo-stadium/sass/components/shop/filter-bar.scss
@@ -6,7 +6,8 @@
 
         & .title {
             @include flex-center-between;
-            margin-bottom: $twenty-pixel;
+            padding-bottom: $fifteen-pixel;
+            cursor: pointer;
         }
 
         & .select-filter {
@@ -19,6 +20,14 @@
     & .see-more {
         color: $text-lighter-white;
         cursor: pointer;
+    }
+
+    & #see-more-dropdown {
+        display: none;
+    }
+
+    & .collapse:not(.show) {
+        display: none !important;
     }
 }
 
