--- a/obo-stadium/template/template-parts/header-w-banner.pug
+++ b/obo-stadium/template/template-parts/header-w-banner.pug
@@ -15,6 +15,6 @@ header.container-fluid
         li.nav-item
           a.nav-link(href='./news.html') Tin tức
         li.nav-item
-          a.nav-link(href='./account.html') Tài khoản
+          a.nav-link(href='') Tài khoản
   .content.text-center
     h1.slogan.main-heading.text-uppercase #{pageTitle}
