--- a/obo-stadium/css/components/shop/filter-bar.css
+++ b/obo-stadium/css/components/shop/filter-bar.css
@@ -1,1 +1,104 @@
-@import"https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";.filter-bar .content{padding:0px .9375rem}.filter-bar .content .title{display:flex;align-items:center;justify-content:space-between;margin-bottom:1.25rem}.filter-bar .content .select-filter .item{margin-bottom:.625rem}.filter-bar .see-more{color:#abacad;cursor:pointer}.filter-header{display:flex;justify-content:space-between;align-items:center}.filter-header .left-side{color:#abacad}.filter-header .fa-sliders-h{transform:rotate(90deg);margin-right:.625rem}.btn-primary.clear-filter{border:none;background-color:#333;color:#fff;padding:.3125rem .9375rem;line-height:1.1875rem;text-transform:uppercase}.btn-primary.clear-filter:active{background-color:#333 !important}.break-line{width:100%;border-top:1px solid #d5d6d6;margin:1.25rem 0px}.size .select-filter{display:flex;align-items:center;justify-content:space-between;flex-flow:wrap}.size .select-filter .item{font-size:.75rem;width:calc(100% / 4 - 10px);text-align:center;border:1px solid #333;border-radius:.125rem;display:flex;align-items:center;justify-content:center;cursor:pointer}.price-input{width:100%;margin-bottom:.625rem;color:#333 !important}.price-input:focus{color:#333 !important}.apply-price.btn-primary{text-transform:uppercase}.date-row{display:flex;align-items:center;justify-content:space-between;margin-bottom:.625rem}.date-row .pretty{margin:0px}@media(max-width: 346px){.size .select-filter .item{width:calc(100% / 2 - 10px)}}/*# sourceMappingURL=filter-bar.css.map */
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+.filter-bar .content {
+  padding: 0px 0.9375rem;
+}
+.filter-bar .content .title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 0.9375rem;
+  cursor: pointer;
+}
+.filter-bar .content .select-filter .item {
+  margin-bottom: 0.625rem;
+}
+.filter-bar .see-more {
+  color: #ABACAD;
+  cursor: pointer;
+}
+.filter-bar #see-more-dropdown {
+  display: none;
+}
+.filter-bar .collapse:not(.show) {
+  display: none !important;
+}
+
+.filter-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.filter-header .left-side {
+  color: #ABACAD;
+}
+.filter-header .fa-sliders-h {
+  transform: rotate(90deg);
+  margin-right: 0.625rem;
+}
+
+.btn-primary.clear-filter {
+  border: none;
+  background-color: #333333;
+  color: #ffffff;
+  padding: 0.3125rem 0.9375rem;
+  line-height: 1.1875rem;
+  text-transform: uppercase;
+}
+.btn-primary.clear-filter:active {
+  background-color: #333333 !important;
+}
+
+.break-line {
+  width: 100%;
+  border-top: 1px solid #D5D6D6;
+  margin: 1.25rem 0px;
+}
+
+.size .select-filter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-flow: wrap;
+}
+.size .select-filter .item {
+  font-size: 0.75rem;
+  width: calc(100% / 4 - 10px);
+  text-align: center;
+  border: 1px solid #333333;
+  border-radius: 0.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.price-input {
+  width: 100%;
+  margin-bottom: 0.625rem;
+  color: #333333 !important;
+}
+.price-input:focus {
+  color: #333333 !important;
+}
+
+.apply-price.btn-primary {
+  text-transform: uppercase;
+}
+
+.date-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.625rem;
+}
+.date-row .pretty {
+  margin: 0px;
+}
+
+@media (max-width: 346px) {
+  .size .select-filter .item {
+    width: calc(100% / 2 - 10px);
+  }
+}
+
+/*# sourceMappingURL=filter-bar.css.map */
