--- a/obo-stadium/template/shop.pug
+++ b/obo-stadium/template/shop.pug
@@ -6,6 +6,7 @@ block customizeCss
   link(rel="stylesheet" type="text/css" href="./css/components/products.css")
   link(rel="stylesheet" type="text/css" href="./css/components/shop/filter-bar.css")
   link(rel="stylesheet" type="text/css" href="./css/components/shop/product-showing.css")
+  link(rel="stylesheet" type="text/css" href="./css/components/shop/filter-bar-small.css")
 
   // Common CSS
   link(rel="stylesheet" type="text/css" href="./css/main.css")
@@ -35,12 +36,11 @@ block mainContent
             | B&#x1ECF; l&#x1ECD;c
         .break-line
         .brand.content
-          .title
+          .title(data-toggle="collapse" href="#brand-collapse" role="button" aria-expanded="false" aria-controls="brand-collapse")
             .text
               | Th&#x1B0;&#x1A1;ng hi&#x1EC7;u
-            a(href='#')
-              i.fas.fa-chevron-up
-          .select-filter
+            i.fas.fa-chevron-up
+          .select-filter.collapse.show(id="brand-collapse")
             .item
               .pretty.p-svg.p-curve
                 input.filter-checkbox(type='checkbox' name='nike' id='nike /')
@@ -69,16 +69,44 @@ block mainContent
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='supreme') Supreme
-          .see-more
-            | Xem th&ecirc;m
+            #see-more-dropdown
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='nike' id='nike /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='nike') Nike
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='air-jordan' id='air-jordan /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='air-jordan') Air Jordan
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='adidas' id='adidas /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='adidas') Adidas
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='supreme' id='supreme /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='supreme') Supreme
+            .see-more#see-more-brand
+              | Xem th&ecirc;m
         .break-line
         .category.content
-          .title
+          .title(data-toggle="collapse" href="#categories-collapse" role="button" aria-expanded="false" aria-controls="categories-collapse")
             .text
               | Danh m&#x1EE5;c
-            a(href='#')
-              i.fas.fa-chevron-up
-          .select-filter
+            i.fas.fa-chevron-up
+          .select-filter.collapse.show(id="categories-collapse")
             .item
               .pretty.p-svg.p-curve
                 input.filter-checkbox(type='checkbox' name='male' id='male /')
@@ -109,12 +137,11 @@ block mainContent
                   label.checkbox-label(for='toddler') S&#x1A1; sinh
         .break-line
         .size.content
-          .title
+          .title(data-toggle="collapse" href="#size-collapse" role="button" aria-expanded="false" aria-controls="size-collapse")
             .text
               | Size
-            a(href='#')
-              i.fas.fa-chevron-up
-          .select-filter
+            i.fas.fa-chevron-up
+          .select-filter.collapse.show(id="size-collapse")
         .break-line
         .price-range.content
           .title
@@ -126,80 +153,93 @@ block mainContent
             | &aacute;p d&#x1EE5;ng
         .break-line
         .release-date.content
-          .title
+          .title(data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample")
             .text
               | N&abreve;m ra m&#x1EAF;t
-            a(href='#')
-              i.fas.fa-chevron-up
-          .date-row
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2019
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2018
-          .date-row
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2017
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2016
-          .date-row
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2015
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2014
-          .date-row
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2013
-            .item
-              .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike /')
-                .state.p-success
-                  svg.svg.svg-icon(viewbox='0 0 20 20')
-                    path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                  label.checkbox-label(for='nike') 2012
-          .see-more
-            | Xem th&ecirc;m
+            i.fas.fa-chevron-up
+          .select-filter.collapse.show(id="collapseExample")
+            .date-row
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='under-2010' id='under-2010 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='under-2010') < 2010
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2011' id='2011 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2011') 2011
+            .date-row
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2012' id='2012 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2012') 2012
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2013' id='2013 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2013') 2013
+            .date-row
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2014' id='2014 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2014') 2014
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2015' id='2015 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2015') 2015
+            .date-row
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2016' id='2016 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2016') 2016
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2017' id='2017 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2017') 2017
+            .date-row
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2018' id='2018 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2018') 2018
+              .item
+                .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='2019' id='2019 /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='2019') 2019
       .product-showing.col-lg-9.col-12
         .sort
           .sort-content
             | S&#x1EAF;p x&#x1EBF;p theo 
             span.sort-name B&aacute;n ch&#x1EA1;y
             i.fas.fa-chevron-down
-          .filter-icon
+          .filter-icon(data-toggle="modal" data-target="#filterModal")
             <i class="fas fa-filter"></i>
         .product-row
           a#123456.product-link(href='./product-details.html')
@@ -406,7 +446,8 @@ block mainContent
             li.page-item
               a.page-link(href='#' aria-label='Next')
                 span(aria-hidden='true') &raquo;
-
+  include ./template-parts/filter-modal
+  
 block footer
   include ./template-parts/footer
   
