--- a/obo-stadium/template/template-parts/header.pug
+++ b/obo-stadium/template/template-parts/header.pug
@@ -15,4 +15,4 @@ header.container-fluid
         li.nav-item
           a.nav-link(href='./news.html') Tin tức
         li.nav-item
-          a.nav-link(href='./account.html') Tài khoản
+          a.nav-link(href='') Tài khoản
