update small filter and sort dropdown

--- a/obo-stadium/css/components/shop/filter-bar-small.css
+++ b/obo-stadium/css/components/shop/filter-bar-small.css
@@ -2,5 +2,25 @@
 .modal-body .filter-bar {
   display: block;
 }
+.modal-body .filter-bar .size .select-filter {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 1.25rem;
+}
+.modal-body .filter-bar .size .select-filter .item {
+  width: 100%;
+  margin: 0px;
+}
+.modal-body .filter-bar .size .select-filter .item:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+@media (max-width: 575.98px) {
+  .modal-body .filter-bar .size .select-filter {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
 
 /*# sourceMappingURL=filter-bar-small.css.map */
