--- a/obo-stadium/template/shop.pug
+++ b/obo-stadium/template/shop.pug
@@ -239,8 +239,10 @@ block mainContent
             | S&#x1EAF;p x&#x1EBF;p theo 
             span.sort-name B&aacute;n ch&#x1EA1;y
             i.fas.fa-chevron-down
+            include ./template-parts/sort-dropdown
+          
           .filter-icon(data-toggle="modal" data-target="#filterModal")
-            <i class="fas fa-filter"></i>
+            i.fas.fa-filter
         .product-row
           a#123456.product-link(href='./product-details.html')
             .product.position-relative
