update css sort function

--- a/obo-stadium/css/components/shop/product-showing.css
+++ b/obo-stadium/css/components/shop/product-showing.css
@@ -38,6 +38,10 @@
   background-color: #CE2E2F;
   color: white;
 }
+.sort-dropdown .sort-item.active {
+  background-color: #CE2E2F;
+  color: white;
+}
 
 .sort-name {
   font-weight: bold;
