--- a/obo-stadium/template/template-parts/sort-dropdown.pug
+++ b/obo-stadium/template/template-parts/sort-dropdown.pug
@@ -1,6 +1,6 @@
 .sort-dropdown
   .sort-item Hàng mới về
-  .sort-item Bán chạy
+  .sort-item.active Bán chạy
   .sort-item Giá thấp đến cao
   .sort-item Giá cao đến thấp
   .sort-item a-z
