--- a/obo-stadium/sass/components/product-details/product-info.scss
+++ b/obo-stadium/sass/components/product-details/product-info.scss
@@ -107,14 +107,14 @@
 
     .size-details,
     .main-content {
-        font-size: $thirty-six-pixel;
+        font-size: $thirty-pixel;
         font-weight: $bold-size;
         line-height: $forty-two-pixel;
     }
 
     .size-text,
     .dropdown-arrow {
-        font-size: $twenty-four-pixel;
+        font-size: $twenty-pixel;
         color: $text-lighter-white;
         line-height: $twenty-eight-pixel;
     }
