--- a/obo-stadium/sass/product-details.scss
+++ b/obo-stadium/sass/product-details.scss
@@ -165,7 +165,7 @@
 
     .btns .size-details,
     .btns .main-content {
-        font-size: $twenty-pixel;
+        font-size: $sixteen-pixel;
     }
 
     .sub-content {
