--- a/obo-stadium/css/bid-details.css
+++ b/obo-stadium/css/bid-details.css
@@ -1,1 +1,80 @@
-@import"https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";.main-content{border:.0625rem solid #d5d6d6;border-radius:.25rem}.main-content .item,.main-content .item-small{border:0px}.main-content .item{display:grid;grid-template-columns:1.5fr 1fr;align-items:center}.main-content .cancel-btn{grid-column:2/2;width:50%;justify-self:flex-end}.main-content .item-small{display:none;margin:0px}.main-content .item-small .cancel-btn{margin-top:1.25rem;width:auto}.main-content .header{display:grid;grid-template-columns:1fr 1fr}.main-content .item-info-wrapper,.main-content .header{margin:1rem 2.5rem}.order-status-wrapper{display:flex;align-items:center;justify-content:space-between}.status,.order-number{font-weight:bold}.order-number{color:#f04e40}.go-back-previous-page{color:#c1554e}.go-back-previous-page:hover{color:#c1554e}@media(max-width: 767px){.order-status-wrapper{display:none}.main-content .item-info-wrapper{margin:0px}.main-content .header{margin-left:1rem}.main-content .item{display:none;padding:1rem 1.25rem}.main-content .item-small{display:block;padding:1rem 1.25rem}}/*# sourceMappingURL=bid-details.css.map */
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+.main-content {
+  border: 0.0625rem solid #D5D6D6 !important;
+  border-radius: 0.25rem;
+}
+.main-content .item,
+.main-content .item-small {
+  border: 0px;
+}
+.main-content .item {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  align-items: center;
+}
+.main-content .cancel-btn {
+  grid-column: 2/2;
+  width: 50%;
+  justify-self: flex-end;
+}
+.main-content .item-small {
+  display: none;
+  margin: 0px;
+}
+.main-content .item-small .cancel-btn {
+  margin-top: 1.25rem;
+  width: auto;
+}
+.main-content .header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.main-content .item-info-wrapper,
+.main-content .header {
+  margin: 1rem 2.5rem;
+}
+
+.order-status-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.status,
+.order-number {
+  font-weight: bold;
+}
+
+.order-number {
+  color: #F04E40;
+}
+
+.go-back-previous-page {
+  color: #C1554E;
+}
+.go-back-previous-page:hover {
+  color: #C1554E;
+}
+
+@media (max-width: 767px) {
+  .order-status-wrapper {
+    display: none;
+  }
+
+  .main-content .item-info-wrapper {
+    margin: 0px;
+  }
+  .main-content .header {
+    margin-left: 1rem;
+  }
+  .main-content .item {
+    display: none;
+    padding: 1rem 1.25rem;
+  }
+  .main-content .item-small {
+    display: block;
+    padding: 1rem 1.25rem;
+  }
+}
+
+/*# sourceMappingURL=bid-details.css.map */
