--- a/obo-stadium/css/buying-selling-products.css
+++ b/obo-stadium/css/buying-selling-products.css
@@ -1,1 +1,9 @@
-@import"https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";.main-content .nav{grid-template-columns:1fr 1fr}.main-content .nav-link{display:inline-block}/*# sourceMappingURL=buying-selling-products.css.map */
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+.main-content .nav {
+  grid-template-columns: 1fr 1fr;
+}
+.main-content .nav-link {
+  display: inline-block;
+}
+
+/*# sourceMappingURL=buying-selling-products.css.map */
