--- a/obo-stadium/css/buying.css
+++ b/obo-stadium/css/buying.css
@@ -1,1 +1,3 @@
-@import"https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/*# sourceMappingURL=buying.css.map */
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+
+/*# sourceMappingURL=buying.css.map */
