--- a/obo-stadium/css/components/lastest-news.css
+++ b/obo-stadium/css/components/lastest-news.css
@@ -1,1 +1,54 @@
-@import"https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap";.news{width:285px !important;display:flex !important;align-items:flex-end;justify-content:center;flex:0 0 auto;margin-left:10px;margin-right:10px}.news .card-img-top{padding:0px}.news .card-body{padding:1rem 1.25rem 1.25rem .625rem;background-color:#fff}.news .card-title{margin-bottom:1rem;line-height:1.1875rem}.news .news-short-desc{color:#333;line-height:1.1875rem}.news .author,.news .author .name{color:#333;font-size:.75rem}.news .author .name,.news .author .name .name{font-weight:bold}.slick-dotted.slick-slider{margin-bottom:0px}.slick-track{margin-bottom:.625rem}.slick-dots{position:static}.slick-dots li button:before{font-size:.625rem}.slick-dots .slick-active button:before{color:#f04e40 !important}/*# sourceMappingURL=lastest-news.css.map */
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+.news {
+  width: 285px !important;
+  display: flex !important;
+  align-items: flex-end;
+  justify-content: center;
+  flex: 0 0 auto;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.news .card-img-top {
+  padding: 0px;
+}
+.news .card-body {
+  padding: 1rem 1.25rem 1.25rem 0.625rem;
+  background-color: #ffffff;
+}
+.news .card-title {
+  margin-bottom: 1rem;
+  line-height: 1.1875rem;
+}
+.news .news-short-desc {
+  color: #333333;
+  line-height: 1.1875rem;
+}
+.news .author,
+.news .author .name {
+  color: #333333;
+  font-size: 0.75rem;
+}
+.news .author .name,
+.news .author .name .name {
+  font-weight: bold;
+}
+
+.slick-dotted.slick-slider {
+  margin-bottom: 0px;
+}
+
+.slick-track {
+  margin-bottom: 0.625rem;
+}
+
+.slick-dots {
+  position: static;
+}
+.slick-dots li button:before {
+  font-size: 0.625rem;
+}
+.slick-dots .slick-active button:before {
+  color: #F04E40 !important;
+}
+
+/*# sourceMappingURL=lastest-news.css.map */
