--- a/obo-stadium/css/main.css
+++ b/obo-stadium/css/main.css
@@ -24,26 +24,26 @@ a:hover {
 
 .trans-btn {
   color: #333333 !important;
-  background-color: white;
-  border: 0.0625rem solid #D5D6D6;
+  background-color: white !important;
+  border: 0.0625rem solid #D5D6D6 !important;
   border-radius: 0.25rem;
 }
 .trans-btn:hover {
-  background-color: white;
-  border-color: #333333;
+  background-color: white !important;
+  border-color: #333333 !important;
 }
 .trans-btn:focus {
   background-color: white !important;
 }
 .trans-btn:active {
   background-color: white !important;
-  border-color: #333333;
+  border-color: #333333 !important;
 }
 
 .btn:focus,
 .btn-primary:focus {
-  outline: none;
-  box-shadow: none;
+  outline: none !important;
+  box-shadow: none !important;
 }
 .btn:active,
 .btn-primary:active {
@@ -52,24 +52,29 @@ a:hover {
 }
 
 .green-btn {
-  background-color: #12B76D;
-  border: none;
+  background-color: #12B76D !important;
+  border-color: #12B76D !important;
   color: white !important;
 }
 .green-btn:hover {
-  background-color: #0f985b;
+  background-color: #0f985b !important;
 }
 .green-btn:active {
   background-color: #12B76D !important;
 }
+.green-btn:focus {
+  background-color: #12B76D !important;
+  border-color: #12B76D !important;
+  color: white !important;
+}
 
 .red-btn {
-  background-color: #F04E40;
-  border: none;
-  color: white;
+  background-color: #F04E40 !important;
+  border-color: #F04E40 !important;
+  color: white !important;
 }
 .red-btn:hover {
-  background-color: #CE2E2F;
+  background-color: #CE2E2F !important;
 }
 .red-btn:active {
   background-color: #F04E40 !important;
@@ -149,6 +154,10 @@ footer .footer-link .item:hover {
 }
 .btn-primary:not(:disabled):not(.disabled):active {
   border-color: inherit;
+}
+
+.modal-dialog {
+  margin-top: 10%;
 }
 
 .pretty input:checked ~ .state.p-success label:after,
