--- a/obo-stadium/sass/components/shop/filter-bar-small.scss
+++ b/obo-stadium/sass/components/shop/filter-bar-small.scss
@@ -2,23 +2,23 @@
 
 .modal-body {
   & .filter-bar {
-    display: block;
+    display: block; 
+  }
 
-    & .size .select-filter {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-      grid-gap: $twenty-pixel;
-    }
+  .size .select-filter {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: $twenty-pixel;
+  }
 
-    & .size .select-filter .item {
-      width: 100%;
-      margin: $zero-pixel;
+  .size .select-filter .item {
+    width: 100%;
+    margin: $zero-pixel;
 
-      &:after {
-        content: "";
-        display: block;
-        padding-bottom: 100%;
-      }
+    &:after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
     }
   }
 }
