--- a/obo-stadium/sass/main.scss
+++ b/obo-stadium/sass/main.scss
@@ -26,12 +26,12 @@ a {
 
 .trans-btn {
     color: $text-dark !important;
-    background-color: white;
+    background-color: white !important;
     @include border-w-radius;
 
     &:hover {
-        background-color: white;
-        border-color: $text-dark
+        background-color: white !important;
+        border-color: $text-dark !important;
     }
 
     &:focus {
@@ -40,15 +40,15 @@ a {
 
     &:active {
         background-color: white !important;
-        border-color: $text-dark
+        border-color: $text-dark !important;
     }
 }
 
 .btn,
 .btn-primary {
     &:focus {
-        outline: $none;
-        box-shadow: $none;
+        outline: $none !important;
+        box-shadow: $none !important;
     }
 
     &:active {
@@ -58,26 +58,32 @@ a {
 }
 
 .green-btn {
-    background-color: $green;
-    border: $none;
+    background-color: $green !important;
+    border-color: $green !important;
     color: white !important;
 
     &:hover {
-        background-color: $dark-green;
+        background-color: $dark-green !important;
     }
 
     &:active {
         background-color: $green !important;
     }
+
+    &:focus {
+        background-color: $green !important;
+        border-color: $green !important;
+        color: white !important;
+    }
 }
 
 .red-btn {
-    background-color: $main-color;
-    border: $none;
-    color: white;
+    background-color: $main-color !important;
+    border-color: $main-color !important;
+    color: white !important;
 
     &:hover {
-        background-color: $hover-main-color;
+        background-color: $hover-main-color !important;
     }
 
     &:active {
@@ -168,6 +174,10 @@ footer .footer-link .item {
 
 .btn-primary:not(:disabled):not(.disabled):active {
     border-color: inherit;
+}
+
+.modal-dialog {
+    margin-top: 10%;
 }
 
 // Override Pretty checkbox
