--- a/obo-stadium/template/buy-page.pug
+++ b/obo-stadium/template/buy-page.pug
@@ -5,10 +5,18 @@ block customizeCss
   link(rel='stylesheet' type='text/css' href='./css/components/header.css')
   link(rel='stylesheet' type='text/css' href='./css/components/buying/product-info.css')
   link(rel='stylesheet' type='text/css' href='./css/components/buying/buying-section.css')
+  link(rel='stylesheet' type='text/css' href='./css/components/buying/pricing.css')
+  
+  link(rel="stylesheet" type="text/css" href="./css/components/product-details/size-choose.css")
+  link(rel="stylesheet" type="text/css" href="./css/components/product-details/size-guide-table.css")
+  link(rel="stylesheet" type="text/css" href="./css/components/input-radio.css")
+  
+
   // Common CSS
   link(rel='stylesheet' type='text/css' href='./css/main.css')
   link(rel='stylesheet' type='text/css' href='./css/except-home-page.css')
   link(rel='stylesheet' type='text/css' href='./css/buying.css')
+  link(rel="stylesheet" type="text/css" href="./css/used-in-js.css")
 
 block title
   title Mua sản phẩm
@@ -25,15 +33,15 @@ block mainContent
           .product-name
             | Adidas Yeezy Boost 700 Wave Runner Solid Grey
           .price-info
-            span.first-row Giá đặt mua cao nhất:
-              span.bid-price-info 9.310.000 &#x20AB; 
+            span.first-row Giá đặt mua cao nhất: 
+              span.bid-price-info 9,310,000 &#x20AB; 
             span.line |
             span.second-line  Giá đặt bán thấp nhất: 
-              span.ask-price-info 9.550.000 &#x20AB;
+              span.ask-price-info 9,550,000 &#x20AB;
           .size-info-wrapper
             | Size: 
             span.size-info
-              | 8US | 41VN | 26CM
+              | 8US | 41VN | 25.4CM
           a.product-image(href='./product-details.html')
             img.img-fluid(src='./image/product-details-image/1.jpg' alt='image-1')
       // Buying Function Section
@@ -52,36 +60,40 @@ block mainContent
                   b Cody
                   |  | 036530xxxx
                 .address 48 Tố Hữu, Lê Văn Lương kéo dài, Từ Liêm, Hà Nội
+          .btns
+            button.btn.btn-primary.complete.red-btn Hoàn thành
+            button.btn.btn-primary.complete.trans-btn Trở lại
         // Pricing Section
         .pricing.childs
-          .size-btn
+          .size-btn(data-toggle="modal" data-target="#sizeChooseModal")
             button.btn.btn-primary.size.trans-btn
               span.size-text Size
-              span.size-details 8US | 41VN | 26CM
+              span.size-details 8US | 41VN | 25.4CM
               i.fas.fa-chevron-down.dropdown-arrow
           .bid-buy-btn
-            button.bid-btn.btn.btn-primary.green-btn Đặt giá mua
-            button.buy-btn.btn.btn-primary.trans-btn
-              | Mua ngay
-          input.price-input.form-control(type='text' placeholder='Đặt giá mua ...')
-          .sub-price.price-include
-            .text Giá sản phẩm
-            .sub-price-showing
-              | 9.550.000 &#x20AB;
-          .shipping-price.price-include
-            .text
-              | Phí vận chuyển
-            .sub-price-showing
-              | 50.000 &#x20AB;
-          .coupon.price-include
-            .text
-              | Mã giảm giá
-            input.form-control(type='text' placeholder='Nhập mã giảm giá ...')
-          .total-price.price-include
-            .text
-              | Tổng thanh toán
-            .total-price-showing
-              | 9.600.000 &#x20AB;
+            //- button.bid-btn.btn.btn-primary.green-btn Đặt giá mua
+            //- button.buy-btn.btn.btn-primary.trans-btn
+            //-   | Mua ngay
+            include ./template-parts/price-counting
+          
+          //- input.price-input.form-control(type='text' placeholder='Đặt giá mua ...' onkeypress="return priceInputValidate(event)")
+          //- .invalid-feedback Giá đặt mua phải lớn hơn 100,000 ₫
+          //- .sub-price.price-include
+          //-   .text Giá sản phẩm
+          //-   .sub-price-showing
+          //- .shipping-price.price-include
+          //-   .text
+          //-     | Phí vận chuyển
+          //-   .shipping-price-showing
+          //-     | 50,000 &#x20AB;
+          //- .coupon.price-include
+          //-   .text
+          //-     | Mã giảm giá
+          //-   input.form-control(type='text' placeholder='Nhập mã giảm giá ...')
+          //- .total-price.price-include
+          //-   .text
+          //-     | Tổng thanh toán
+          //-   .total-price-showing 
         // Payment Methods Section
         .payment-methods.childs
           .title
@@ -102,8 +114,22 @@ block mainContent
           button.btn.btn-primary.confirm-btn.red-btn
             | Đặt mua
 
+  // Modals
+  include ./template-parts/size-choose-modal
+  include ./template-parts/size-guide-modal
+  include ./template-parts/shipping-info
+  
+
 block footer
   include ./template-parts/footer
 
 block customizeScript
+  // Currency
+  script(type="text/javascript" src="./vendor/currency/currency.min.js")
+
+  // Common
   script(src="./script/except-home-page.js")
+  script(src="./script/size-render.js")
+  script(src="./script/size-choose.js")
+  script(src="./script/buy-page.js")
+  script(src="./script/buy-page.js")
